--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <h1>LeffaDB</h1>
 <h2>Tervetuloa elokuvatietokantasovellus LeffaDB:een!</h2>
 <br>
+<a href="/movies">Elokuvat</a>
 {% if session.user_id %}
 <p>Tervetuloa, {{ session.username }}</p>
 <a href="/logout">Kirjaudu ulos</a>
