Change get_movies to return movie_id as well and create hyperlinks to movie pages

--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <a href="/movies/add"><button>Lisää elokuva</button></a><br>
 {% for movie in movies %}
-{{movie[0]}} ({{movie[1]}})<br>
+<a href="/movies/{{movie[0]}}">{{movie[1]}} ({{movie[2]}})</a><br>
 {% endfor %}
