Show reviews on movie pages

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
 <title>{{movie[0]}}</title>
 <h1>{{movie[0]}} ({{movie[1]}})</h1>
+
+{% for review in reviews %}
+{{review[1]}}/5
+<br>
+{{review[2]}}
+<hr>
+{% endfor %}
