Add hyperlink to review page

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <title>{{movie[0]}}</title>
 <h1>{{movie[0]}} ({{movie[1]}})</h1>
+<br>
+<a href="/movies/{{movie_id}}/review">Arvostele</a>
+<hr>
 
 {% for review in reviews %}
 {{review[1]}}/5
