Make relevant fields in forms required

--- a/templates/add-movie.html
+++ b/templates/add-movie.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <form action="/movies/add" method="POST">
     <p>Elokuvan nimi:<br>
-    <input type="text" name="movie_name"></p>
+    <input type="text" name="movie_name" required></p>
     <p>Julkaisuvuosi:<br>
-    <input type="number" name="release_year"></p>
+    <input type="number" name="release_year" required></p>
     <br>
     <input type="submit" value="Lisää elokuva">
 </form>
