--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <form action="/login" method="POST">
     <p>Käyttäjätunnus:<br>
-    <input type="text" name="username"></p>
+    <input type="text" name="username" required></p>
     <p>Salasana:<br>
-    <input type="password" name="password"></p>
+    <input type="password" name="password" required></p>
     <br>
     <input type="submit" value="Kirjaudu sisään">
     <br>
