--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <form action="/register" method="POST">
     <p>Käyttäjätunnus:<br>
-    <input type="text" name="username"></p>
+    <input type="text" name="username" required></p>
     <p>Salasana:<br>
-    <input type="password" name="password"></p>
+    <input type="password" name="password" required></p>
     <p>Salana uudelleen:<br>
-    <input type="password" name="password2"></p>
+    <input type="password" name="password2" required></p>
     <br>
     <input type="submit" value="Rekisteröidy">
 </form>
