Display username in review

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -7,8 +7,9 @@
 <hr>
 {% endif %}
 {% for review in reviews %}
-{{review[1]}}/5
+{{review[1]}}:
+{{review[2]}}/5
 <br>
-{{review[2]}}
+{{review[3]}}
 <hr>
 {% endfor %}
