Display image on movie page

--- a/templates/add-movie.html
+++ b/templates/add-movie.html
@@ -5,7 +5,7 @@
     <p>Julkaisuvuosi:<br>
     <input type="number" name="release_year" required></p>
     <p>Kuva<br>
-    <input type="file" name="movie_image"></p>
+    <input type="file" name="movie_image" required></p>
     <br>
     <input type="submit" value="Lisää elokuva">
 </form>
