Add search functionality

--- a/templates/movies.html
+++ b/templates/movies.html
@@ -3,6 +3,8 @@
 <a href="/movies/add"><button>Lisää elokuva</button></a><br>
 <hr>
 {% endif %}
+<a href="/movies/search"><button>Hae elokuvaa</button></a>
+<hr>
 {% for movie in movies %}
 <a href="/movies/{{movie[0]}}">{{movie[1]}} ({{movie[2]}})</a><br>
 <hr>
