Add navbar via Bootstrap

--- a/templates/add-movie.html
+++ b/templates/add-movie.html
@@ -1,4 +1,43 @@
 <!DOCTYPE html>
+<html lang="fi" data-bs-theme="dark">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<title>LeffaDB</title>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">LeffaDB</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Koti</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/movies">Elokuvat <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/movies/search">Hae elokuvaa</a>
+        </li>
+        {% if session.user_id %}
+        <li class="nav-item">
+            <a class="nav-link" href="#">{{session.username}}</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/logout">Kirjaudu ulos</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+        <a class="nav-link" href="/login">Kirjaudu sisään</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/register">Rekisteröidy</a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
 <form action="/movies/add" method="POST" enctype="multipart/form-data">
     <p>Elokuvan nimi:<br>
     <input type="text" name="movie_name" required></p>
