--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
+<html lang="fi">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<title>LeffaDB</title>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">LeffaDB</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Koti</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/movies">Elokuvat<span class="sr-only">(current)</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/movies/search">Hae elokuvaa</a>
+        </li>
+        {% if session.user_id %}
+        <li class="nav-item">
+            <a class="nav-link" href="#">{{session.username}}</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/logout">Kirjaudu ulos</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+        <a class="nav-link" href="/login">Kirjaudu sisään</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/register">Rekisteröidy</a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
 {% if session.user_id == 1 %}
 <a href="/movies/add"><button>Lisää elokuva</button></a><br>
 <hr>
 {% endif %}
-<a href="/movies/search"><button>Hae elokuvaa</button></a>
-<hr>
 {% for movie in movies %}
 <a href="/movies/{{movie[0]}}">{{movie[1]}} ({{movie[2]}})</a><br>
 <hr>
 {% endfor %}
-<a href="/">Takaisin</a>
