Add ability to enter user info when registering a new user

--- a/templates/register.html
+++ b/templates/register.html
@@ -45,6 +45,10 @@
     <input type="password" name="password" required></p>
     <p>Salana uudelleen:<br>
     <input type="password" name="password2" required></p>
+    <p>Lempielokuva:<br>
+    <input type="text" name="fav_movie"></p>
+    <p>Lempigenre:<br>
+    <input type="text" name="fav_genre"></p>
     <br>
     <input type="submit" value="Rekisteröidy">
 </form>
