--- a/templates/movie.html
+++ b/templates/movie.html
@@ -21,7 +21,7 @@
         </li>
         {% if session.user_id %}
         <li class="nav-item">
-            <a class="nav-link" href="#">{{session.username}} <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/profiles/{{session.user_id}}">{{session.username}} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout">Kirjaudu ulos <span class="sr-only">(current)</span></a>
