--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,14 +15,14 @@
           <a class="nav-link" href="/">Koti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/movies">Elokuvat <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/movies">Elokuvat</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/movies/search">Hae elokuvaa</a>
         </li>
         {% if session.user_id %}
         <li class="nav-item">
-            <a class="nav-link" href="#">{{session.username}}</a>
+            <a class="nav-link active" href="#">{{session.username}}</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout">Kirjaudu ulos</a>
@@ -38,7 +38,6 @@
       </ul>
     </div>
 </nav>
-<title>{{user[0]}}</title>
 <h1>{{user[0]}}</h1>
 <p>Lempielokuva: {{user[1]}}</p>
 <p>Lempigenre: {{user[2]}}</p>
