--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
         </li>
         {% if session.user_id %}
         <li class="nav-item">
-            <a class="nav-link active" href="#">{{session.username}}</a>
+            <a class="nav-link active" href="/profiles/{{session.user_id}}">{{session.username}}</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout">Kirjaudu ulos</a>
