Change movie page to display genre

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -38,7 +38,8 @@
     </div>
   </nav>
 <title>{{movie[0]}}</title>
-<h1>{{movie[0]}} ({{movie[1]}})</h1>
+<h1>{{movie[0]}} ({{movie[2]}})</h1>
+<h4>{{movie[1]}}</h4>
 <img src="data:image/jpeg;base64,{{movie_image}}" alt="Movie cover image" style="height:200px;">
 <h2>{{average_score}}/5</h2>
 <br>
