--- a/templates/review.html
+++ b/templates/review.html
@@ -39,7 +39,8 @@
     </div>
   </nav>
 <title>{{movie[0]}}</title>
-<h1>{{movie[0]}} ({{movie[1]}})</h1>
+<h1>{{movie[0]}} ({{movie[2]}})</h1>
+<h4>{{movie[1]}}</h4>
 <form action="/movies/add-review" id="review" method="POST">
     Pisteet: 1
     <input type="radio" name="score" value="1" required>
