--- a/templates/register.html
+++ b/templates/register.html
@@ -48,7 +48,11 @@
     <p>Lempielokuva:<br>
     <input type="text" name="fav_movie"></p>
     <p>Lempigenre:<br>
-    <input type="text" name="fav_genre"></p>
+      <select name="fav_genre" required>
+        {% for genre in genres %}
+        <option value="{{genre}}">{{genre}}</option>
+        {% endfor %}
+      </select></p>
     <br>
     <input type="submit" value="Rekisteröidy">
 </form>
