--- a/templates/add-movie.html
+++ b/templates/add-movie.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fi" data-bs-theme="dark">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>LeffaDB</title>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LeffaDB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
           <a class="nav-link" href="/">Koti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/movies">Elokuvat <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="/movies">Elokuvat</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/movies/search">Hae elokuvaa</a>
@@ -38,7 +38,7 @@
       </ul>
     </div>
   </nav>
-<form action="/movies/add" method="POST" enctype="multipart/form-data">
+<form action="/movies/add" method="POST" enctype="multipart/form-data" class="text-center">
     <p>Elokuvan nimi:<br>
     <input type="text" name="movie_name" required></p>
     <p>Julkaisuvuosi:<br>
