--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,43 @@
 <!DOCTYPE html>
+<html lang="fi" data-bs-theme="dark">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<title>LeffaDB</title>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">LeffaDB</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Koti</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/movies">Elokuvat</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/movies/search">Hae elokuvaa</a>
+        </li>
+        {% if session.user_id %}
+        <li class="nav-item">
+            <a class="nav-link" href="/profiles/{{session.user_id}}">{{session.username}}</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/logout">Kirjaudu ulos</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+        <a class="nav-link" href="/login">Kirjaudu sisään</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/register">Rekisteröidy</a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
 {{error_message}}
 <br>
-
 <a href="/">Takaisin etusivulle</a>
