--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fi" data-bs-theme="dark">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>LeffaDB</title>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LeffaDB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,8 +11,8 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Koti <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Koti</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/movies">Elokuvat</a>
@@ -38,5 +38,7 @@
       </ul>
     </div>
   </nav>
-<h2>Tervetuloa elokuvatietokantasovellus LeffaDB:een!</h2>
+<body class="text-center">
+  <h2>Tervetuloa elokuvatietokantasovellus LeffaDB:een!</h2>
+</body>
 </html>
