--- a/templates/movie.html
+++ b/templates/movie.html
@@ -1,8 +1,9 @@
-<html lang="fi">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<!DOCTYPE html>
+<html lang="fi" data-bs-theme="dark">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>LeffaDB</title>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LeffaDB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,55 +12,56 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/">Koti <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/movies">Elokuvat</a>
+          <a class="nav-link" href="/">Koti</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/movies/search">Hae elokuvaa <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="/movies">Elokuvat</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/movies/search">Hae elokuvaa</a>
         </li>
         {% if session.user_id %}
         <li class="nav-item">
-            <a class="nav-link" href="/profiles/{{session.user_id}}">{{session.username}} <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/profiles/{{session.user_id}}">{{session.username}}</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/logout">Kirjaudu ulos <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/logout">Kirjaudu ulos</a>
         </li>
         {% else %}
         <li class="nav-item">
-        <a class="nav-link" href="/login">Kirjaudu sisään <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/login">Kirjaudu sisään</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/register">Rekisteröidy <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/register">Rekisteröidy</a>
         </li>
         {% endif %}
       </ul>
     </div>
   </nav>
-<title>{{movie[0]}}</title>
-<h1>{{movie[0]}} ({{movie[2]}})</h1>
-<h4>{{movie[1]}}</h4>
-<img src="data:image/jpeg;base64,{{movie_image}}" alt="Movie cover image" style="height:200px;">
-<h2>{{average_score}}/5</h2>
-<br>
-{% if session.user_id %}
-<a href="/movies/{{movie_id}}/review"><button>Arvostele</button></a>
-<hr>
-{% endif %}
-{% for review in reviews %}
-<a href="/profiles/{{review[1]}}">{{review[2]}}:</a>
-{{review[3]}}/5
-<br>
-{{review[4]}}
-{% if session.user_id == review[1] or session.user_id == 1 %}
-<br>
-<a href="/delete-review?id={{review[0]}}">Poista arvostelu</a>
-{% endif %}
-<hr>
-{% endfor %}
-{% if session.user_id == 1 %}
-<a href="/delete-movie?id={{movie_id}}">Poista elokuva</a>
-<br>
-{% endif %}
-<a href="/movies">Takaisin</a>
+<div class="text-center">
+  <h1>{{movie[0]}} ({{movie[2]}})</h1>
+  <h4>{{movie[1]}}</h4>
+  <img src="data:image/jpeg;base64,{{movie_image}}" alt="Movie cover image" style="height:200px;">
+  <h2>{{average_score}}/5</h2>
+  <br>
+</div>
+  {% if session.user_id %}
+  <a href="/movies/{{movie_id}}/review"><button>Arvostele</button></a>
+  <hr>
+  {% endif %}
+    {% for review in reviews %}
+    <a href="/profiles/{{review[1]}}">{{review[2]}}:</a>
+    {{review[3]}}/5
+    <br>
+    {{review[4]}}
+    {% if session.user_id == review[1] or session.user_id == 1 %}
+    <br>
+    <a href="/delete-review?id={{review[0]}}">Poista arvostelu</a>
+    {% endif %}
+    <hr>
+    {% endfor %}
+  {% if session.user_id == 1 %}
+  <a href="/delete-movie?id={{movie_id}}">Poista elokuva</a>
+  <br>
+  {% endif %}
+  <a href="/movies">Takaisin</a>
