--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fi" data-bs-theme="dark">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>LeffaDB</title>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LeffaDB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,8 @@
         {% endif %}
       </ul>
     </div>
-</nav>
+  </nav>
+<div class="fs-5 text-center">
 <h1>{{user[1]}}</h1>
 <p>Lempielokuva: {{user[2]}}</p>
 <p>Lempigenre: {{user[3]}}</p>
@@ -45,4 +46,5 @@
 {% if session.user_id == user[0] %}
 <a href="/profiles/edit"><button>Muokkaa profiilia</button></a>
 {% endif %}
+</div>
 
