--- a/templates/review.html
+++ b/templates/review.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fi" data-bs-theme="dark">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>LeffaDB</title>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LeffaDB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
           <a class="nav-link" href="/">Koti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/movies">Elokuvat <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="/movies">Elokuvat</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/movies/search">Hae elokuvaa</a>
@@ -38,20 +38,22 @@
       </ul>
     </div>
   </nav>
-<title>{{movie[0]}}</title>
-<h1>{{movie[0]}} ({{movie[2]}})</h1>
-<h4>{{movie[1]}}</h4>
-<form action="/movies/add-review" id="review" method="POST">
-    Pisteet: 1
-    <input type="radio" name="score" value="1" required>
-    <input type="radio" name="score" value="2" required>
-    <input type="radio" name="score" value="3" required>
-    <input type="radio" name="score" value="4" required>
-    <input type="radio" name="score" value="5" required>
-    5
-    <br>
-    <textarea name="comment" form="review" placeholder="Kirjoita arvostelusi"></textarea>
-    <br>
-    <input type="submit" value="Julkaise arvostelu">
-    <input type="hidden" name="movie_id" value="{{movie_id}}">
-</form>
+<div class="text-center">
+  <title>{{movie[0]}}</title>
+  <h1>{{movie[0]}} ({{movie[2]}})</h1>
+  <h4>{{movie[1]}}</h4>
+  <form action="/movies/add-review" id="review" method="POST">
+      Pisteet: 1
+      <input type="radio" name="score" value="1" required>
+      <input type="radio" name="score" value="2" required>
+      <input type="radio" name="score" value="3" required>
+      <input type="radio" name="score" value="4" required>
+      <input type="radio" name="score" value="5" required>
+      5
+      <br>
+      <textarea name="comment" form="review" rows="4" cols="100" placeholder="Kirjoita arvostelusi"></textarea>
+      <br>
+      <input type="submit" value="Julkaise arvostelu">
+      <input type="hidden" name="movie_id" value="{{movie_id}}">
+  </form>
+</div>
