Make movies searchable by genre and release year

--- a/templates/search.html
+++ b/templates/search.html
@@ -40,7 +40,7 @@
   </nav>
 <div class="d-flex align-items-center justify-content-center">
 <form action="/movies/search/result" method="GET" class="fs-4">
-    Elokuvan nimi: <input type="text" name="query">
+    Elokuvan nimi, julkaisuvuosi tai genre: <input type="text" name="query">
     <input type="submit" value="Hae">
 </form>
 </div>
