Add user reviews to profile pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,10 @@
       </ul>
     </div>
   </nav>
-<body class="text-center">
+<div class="text-center fs-4">
   <h2>Tervetuloa elokuvatietokantasovellus LeffaDB:een!</h2>
-</body>
+  <br>
+  <p>LeffaDB:n avulla voit hakea sekä arvostella elokuvia sekä lukea muiden käyttäjien jättämiä arvosteluja.</p>
+  <p>Lisätietoja sovelluksen toiminnasta <a href="https://github.com/komulaleksi/elokuva-arvostelu-app">Github-sivulta.</a></p>
+</div>
 </html>
