--- a/templates/review.html
+++ b/templates/review.html
@@ -51,7 +51,7 @@
       <input type="radio" name="score" value="5" required>
       5
       <br>
-      <textarea name="comment" form="review" rows="4" cols="100" placeholder="Kirjoita arvostelusi"></textarea>
+      <textarea name="comment" form="review" rows="4" cols="100" placeholder="Kirjoita arvostelusi" maxlength="1000"></textarea>
       <br>
       <input type="submit" value="Julkaise arvostelu">
       <input type="hidden" name="movie_id" value="{{movie_id}}">
