Update front page text

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 <div class="text-center fs-4">
   <h2>Tervetuloa elokuvatietokantasovellus LeffaDB:een!</h2>
   <br>
-  <p>LeffaDB:n avulla voit hakea sekä arvostella elokuvia sekä lukea muiden käyttäjien jättämiä arvosteluja.</p>
-  <p>Lisätietoja sovelluksen toiminnasta <a href="https://github.com/komulaleksi/elokuva-arvostelu-app">Github-sivulta.</a></p>
+  <p>LeffaDB on elokuvatietokantasovellus, jonka avulla voit hakea sekä arvostella elokuvia sekä lukea muiden käyttäjien jättämiä arvosteluja.</p>
+  <p>Luotu Tietokannat ja web-ohjelmointi-kurssia varten. Lisätietoja sovelluksen toiminnasta <a href="https://github.com/komulaleksi/elokuva-arvostelu-app">Github-sivulta.</a></p>
 </div>
 </html>
